objects/EasyPost_Integration__mdt.object
<CustomObject>
    <description>This metadata contains information about all callouts from Salesforce to EasyPost. Information contained are endpoint address,name ,write-back fields,Integration method used</description>
    <fields>
        <fullName>EndPoint_URL__c</fullName>
        <label>EndPoint_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Integration_Method__c</fullName>
        <label>Integration Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GET</fullName>
                    <default>true</default>
                    <label>GET</label>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_Parameters__c</fullName>
        <label>URL Parameters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Write_Back_Field__c</fullName>
        <label>Write Back Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EasyPost Outbound Integration</label>
    <pluralLabel>EasyPost Outbound Integrations</pluralLabel>
</CustomObject>